deploy/kubernetes/test/existing-mtls-policy.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: existing-mtls-policy
  namespace: streamarr
spec:
  mtls:
    mode: STRICT
